--- a/index.html
+++ b/index.html
@@ -112,10 +112,10 @@
 							<div class="letter-content">
 								<p class="greeting">HAPPY BIRTHDAY RIRINNNN🫵✨</p>
 								<p>
-									i hope I'm the first one to say it to uu hehe, mauja bilang thank uuu for all the
+									i hope I'm the first one to say happy birthday to uu hehe, mauja bilang thank uuu for all the
 									things that u do for me meskipun sebatas responding and listening tapii karena itu
 									bisa ka punya teman cerita, idk how to say this but setiap chat ka sama kau kek ada
-									kurasa bagian dari diriku merasa ringan (sorry alay skali skali🤭)
+									kurasa bagian dari diriku merasa ringan (sorry alay, skali skali🤭)
 								</p>
 								<p>
 									also I'm sorry kalau semisal annoying ka atau ada pertanyaan ku yang buat ko
@@ -125,18 +125,19 @@
 								</p>
 								<p>
 									i wish di umur mu yang ke 20 ini u can find urself, bisa ko lebih berani dengan diri
-									mu sendiri.
+									mu sendiriiii.
 									jangan lupaa journaling and bersyukurr atas harii mu hari inii, kalau kamu nya capek
 									get a sleep dan mulai ulang lagi di esok harii
 								</p>
 								<p>
 									also I just want u to know kalau ada seseorang disini yang support ko and I'm sure
-									it'll be fine apapun yang kamu lakukan selama kamu nyaman jadi dirimuu. so kalau
-									kamu merasa overwhelmed dan mau ko bicara talk to mee I'll be here trying my best to
+									it'll be fine apapun yang kamu lakukan selama kamu nyaman jadi dirimuu sometimes being
+									nerd adalah hal yang kerennnn kalau kamu mau tauu soalnya menjadi nerd means u have ur own world right?.
+									and juga kalau kamu merasa overwhelmed dan mau ko bicara, talk to mee I'll be here trying my best to
 									listen to u.
 								</p>
 								<p>
-									once again happy birthday Ririn Dwi Cahyani. semogaa di kepala dua mu ini bisa ki
+									once again happy birthday Ririn Dwi Cahyani. semogaa di kepala dua mu ini bisa ko
 									mulai dengan lebih baikk
 								</p>
 								<p class="closing">-ur admirer 🤭</p>
