Update birthday message text for Ririn

--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
 								</p>
 								<p>
 									once again happy birthday Ririn Dwi Cahyani. semogaa di kepala dua mu ini bisa ko
-									mulai dengan lebih baikk
+									mulai dengan lebih baikkkkk
 								</p>
 								<p class="closing">-ur admirer 🤭</p>
 							</div>
