fix: resolve typos in effect.js and index.html

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 			</div>
 		</div>
 		<div class="row cake-cover">
-			<div class="col-md-12 texr-center">
+			<div class="col-md-12 text-center">
 				<div class="cake">
 					<div class="velas">
 						<div class="fuego"></div>
@@ -112,7 +112,8 @@
 							<div class="letter-content">
 								<p class="greeting">HAPPY BIRTHDAY RIRINNNN🫵✨</p>
 								<p>
-									i hope I'm the first one to say happy birthday to uu hehe, mauja bilang thank uuu for all the
+									i hope I'm the first one to say happy birthday to uu hehe, mauja bilang thank uuu
+									for all the
 									things that u do for me meskipun sebatas responding and listening tapii karena itu
 									bisa ka punya teman cerita, idk how to say this but setiap chat ka sama kau kek ada
 									kurasa bagian dari diriku merasa ringan (sorry alay, skali skali🤭)
@@ -131,14 +132,19 @@
 								</p>
 								<p>
 									also I just want u to know kalau ada seseorang disini yang support ko and I'm sure
-									it'll be fine apapun yang kamu lakukan selama kamu nyaman jadi dirimuu sometimes being
-									nerd adalah hal yang kerennnn kalau kamu mau tauu soalnya menjadi nerd means u have ur own world right?.
-									and juga kalau kamu merasa overwhelmed dan mau ko bicara, talk to mee I'll be here trying my best to
-									listen to u.
+									it'll be fine apapun yang kamu lakukan selama kamu nyaman jadi dirimuu sometimes
+									being
+									nerd adalah hal yang kerennnn kalau kamu mau tauu soalnya menjadi nerd means u have
+									ur own world right?.
+									and juga kalau kamu merasa overwhelmed dan mau ko bicara, talk to mee I'll be here
+									trying my best to
+									listen to u. oh iyaa sebenarnya kutau mi ultah mu tanggal 16 mwheheheh jago ka pura
+									pura nd tau toh wkwkwkw
 								</p>
 								<p>
-									once again happy birthday Ririn Dwi Cahyani. semogaa di kepala dua mu ini bisa ko
-									mulai dengan lebih baikkkkk
+									once again happy birthday Ririn Dwi Cahyaniiii. semogaa di kepala dua mu ini bisa ko
+									mulai dengan lebih baikkkkk, dan semogaa apa yang ko inginkan bisa tercapai tahun
+									ini (kadoo nyusul yah :p)
 								</p>
 								<p class="closing">-ur admirer 🤭</p>
 							</div>
